--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pbot
 beautifulsoup4
 requests
 sqlalchemy==1.3.20
-pyrogram==1.1.13
+pyrogram
 tgCrypto>=1.2.2
 python-telegram-bot==12.8
 psycopg2-binary
