--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ aiogram
 aioredis # Redis memery storage fom aiogram
 envparse
 PyYAML>5.0
-aiohttp>=2.2.5
+aiohttp
 CurrencyConverter
 googletrans==3.1.0a0
 jikanpy
@@ -64,7 +64,7 @@ pySmartDL
 validators
 youtube_search
 cloudscraper
-Python_ARQ
+python-arq
 fontTools
 google_trans_new
 asyncio
