--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ envparse
 PyYAML>5.0
 aiohttp>=2.2.5
 CurrencyConverter
-googletrans==3.1.0a0
+googletrans==4.0.0-rc1
 jikanpy
 speedtest-cli
 coffeehouse
@@ -66,7 +66,7 @@ youtube_search
 cloudscraper
 python-arq
 fontTools
-google_trans_new
+google-trans-new==1.1.9
 asyncio
 pykeyboard
 search_engine_parser
