--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ redis
 lxml
 pbot
 beautifulsoup4
-requests
+requests==2.20.0
 sqlalchemy==1.3.20
 pyrogram
 tgCrypto>=1.2.2
@@ -66,7 +66,7 @@ youtube_search
 cloudscraper
 python-arq
 fontTools
-google-trans-new==1.1.9
+google_trans_new
 asyncio
 pykeyboard
 search_engine_parser
